added svg icon to masthead

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ header {
   background-color: #a81e4d;
 }
 
+.logo {
+  width: 48px;
+}
+
 h1 {
   color: #fff;
 }
@@ -54,7 +58,7 @@ footer p {
 
 @media only screen and (min-width: 20em) {
 
-  h1 {
+  .masthead {
     text-align: center;
   }
 
