--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@ html {
   font-family: "Josefin Sans", sans-serif;
 }
 
+body {
+  background-image: url("../images/sweets.png");
+  background-size: 20px;
+}
+
 h1, h2, h3 {
   font-family: "Josefin Slab", serif;
 }
@@ -16,6 +21,10 @@ header {
 
 h1 {
   color: #fff;
+}
+
+main {
+  background-color: #fff;
 }
 
 a {
@@ -101,6 +110,10 @@ footer p {
 @media only screen and (min-width: 60em) {
 
   .masthead {
+    text-align: left;
+  }
+
+  footer p {
     text-align: left;
   }
 
